Test branch for v2 features

--- a/dafne/src/app/edit-centres/edit-centres.component.html
+++ b/dafne/src/app/edit-centres/edit-centres.component.html
@@ -93,7 +93,7 @@
                                 <small id="colorHelp" class="form-text">Hex color in the form #rrggbb</small>
                             </div>
                         </div>
-                        <div class="mb-1 mr-1 ml-auto">
+                        <div class="mb-1 mr-0 ml-auto check-div">
                             <label for="add_local" class="form-label">Local</label>
                             <input type="checkbox" class="form-control" id="add_local" name="local-checkbox" [checked]="false">
                         </div>
