--- a/dafne/src/app/header/header.component.html
+++ b/dafne/src/app/header/header.component.html
@@ -6,9 +6,8 @@
       <ul class="dropdown-menu" id="dropdown-menu" aria-labelledby="account-dropdown-button" >
             <li id="centres-link"><a class="dropdown-item" routerLink="edit-centres" [skipLocationChange]="true" >Centres</a></li>
             <li id="services-link"><a class="dropdown-item" routerLink="edit-services" [skipLocationChange]="true" >Services</a></li>
-            <li id="synchronizers-link">
-                  <a class="dropdown-item" routerLink="edit-synchronizers" [skipLocationChange]="true" >Synchronizers</a>
-            </li>
+            <li id="synchronizers-link"><a class="dropdown-item" routerLink="edit-synchronizers" [skipLocationChange]="true" >Synchronizers</a></li>
+            <li id="publication-latency-link"><a class="dropdown-item" [routerLink]="['/gui', { outlets: { centralBodyRouter: ['publication-latency-component']}}]" [skipLocationChange]="true">Publication Latency</a></li>
             <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
       </ul>
 </div>
