--- a/dafne/src/app/MAIN_VIEW_ITEMS/publication-latency/publication-latency.component.css
+++ b/dafne/src/app/MAIN_VIEW_ITEMS/publication-latency/publication-latency.component.css
@@ -13,17 +13,14 @@
     background-color: var(--main-bg-color);
     color: var(--main-text-color);
     width: 100%;
-    /* height: calc(100vh - 9rem - 12rem); */
 }
 
 /* Filters view */
 #filters-form-container {
     background-color: var(--windows-bg-color);
-    flex-shrink: 1;
     height: 3rem;
     line-height: 2rem;
-    margin: 0.5rem 1rem;
-    padding: 0 1rem;
+    margin: 0.5rem auto;
 
     -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
@@ -46,18 +43,16 @@
     font-size: 0.75rem;
     text-align: right;
     margin-right: 0.5rem;
-    margin-left: 2rem;
-}
-#filters-form select {
-    background-color: var(--modal-bg-color);
-    border-color: var(--title-bg-color);
-    color: var(--main-text-color);
-    font-size: 0.75rem;
+    margin-left: 1rem;
 }
 #filter-submit-button {
-    font-size: 0.75rem;
+    font-size: 1.0rem;
     height: 2rem;
-    margin-left: 6rem;
+    text-align: center;
+    line-height: 1rem;
+    margin-left: 4rem;
+    padding-left: 2rem;
+    padding-right: 4rem;
 }
 ::ng-deep dp-date-picker.dp-material .dp-picker-input {
     background-color: var(--modal-bg-color) !important;
@@ -117,7 +112,6 @@
     flex-direction: row;
     background-color: var(--main-bg-color);
     color: var(--main-text-color);
-    /* overflow-y: auto; */
 }
 
 /* Centres List */
@@ -150,6 +144,14 @@
 #central-container {
     flex-grow: 1;
     flex-shrink: 1;
+}
+
+/* Fake Day Title */
+#fake-day-title {
+    position: absolute;
+    margin-top: 2rem;
+    width: 85%;
+    text-align: center;
 }
 
 /* Charts */
@@ -232,6 +234,7 @@
     overflow-y: auto;
 }
 table {
+    /* table-layout: fixed ; */
     width: 100%;
 }
 caption, th, td {
