Test Pub Latency added functionalities

--- a/dafne/src/app/MAIN_VIEW_ITEMS/publication-latency/publication-latency.component.css
+++ b/dafne/src/app/MAIN_VIEW_ITEMS/publication-latency/publication-latency.component.css
@@ -237,6 +237,9 @@ table {
     /* table-layout: fixed ; */
     width: 100%;
 }
+table tr td:first-child, th:first-child{
+    padding: 0 0.5rem;
+}
 caption, th, td {
     text-align: center;
 }
