--- a/dafne/src/app/sidebar/sidebar.component.html
+++ b/dafne/src/app/sidebar/sidebar.component.html
@@ -5,4 +5,5 @@
     <app-data-source-info></app-data-source-info>
     <app-dhs-connected></app-dhs-connected>
     <app-dhs-completeness></app-dhs-completeness>
+    <app-pub-latency></app-pub-latency>
 </div>
