#SD-348 started adding weekly calendar chart in service availability

--- a/dafne/src/app/MAIN_VIEW_ITEMS/service-availability/service-availability.component.html
+++ b/dafne/src/app/MAIN_VIEW_ITEMS/service-availability/service-availability.component.html
@@ -38,7 +38,7 @@
             <!-- Chart Buttons -->
             <h2 id="buttons-title">CHART</h2>
             <button (click)="chartChangeTo('Bar Chart')">Bar Chart</button>
-            <button *ngIf="isWeekly==false" (click)="chartChangeTo('Calendar Chart')">Calendar Chart</button>
+            <button (click)="chartChangeTo('Calendar Chart')">Calendar Chart</button>
 
             <!-- Legend -->
             <hr>
