--- a/dafne/src/app/MAIN_VIEW_ITEMS/service-availability/service-availability.component.html
+++ b/dafne/src/app/MAIN_VIEW_ITEMS/service-availability/service-availability.component.html
@@ -52,10 +52,11 @@
                 <span *ngIf="averageServiceAvailability < 0"> ---</span>
             </div>
             <hr>
-            <!-- Buttons and info -->            
-            <h6 *ngIf="isWeekly == true && firstWeeklySubmitted" class="button-info" style="text-align: center;">Click on a bar to show the days of that week</h6>
+            <!-- Buttons and info -->
+            <h6 *ngIf="isWeekly == true && firstWeeklySubmitted && chartType == selectorText[0]" class="button-info" style="text-align: center;">Click on a bar to show the days of that week</h6>
+            <h6 *ngIf="isWeekly == true && firstWeeklySubmitted && chartType == selectorText[1]" class="button-info" style="text-align: center;">Click on a section to show the days of that week</h6>
             <button *ngIf="isWeekly == true && firstDailySubmitted" class="button-info" id="back-to-daily-button" (click)="onBackToDailyClicked()">Back to daily</button>
-            <button *ngIf="isWeekly == false && firstWeeklySubmitted" class="button-info" id="back-to-weekly-button" (click)="onBackToWeeklyClicked()">Back to weekly</button>       
+            <button *ngIf="isWeekly == false && firstWeeklySubmitted" class="button-info" id="back-to-weekly-button" (click)="onBackToWeeklyClicked()">Back to weekly</button>
         </section>
     </div>
 </div>
