--- a/dafne/src/app/edit-services/edit-services.component.html
+++ b/dafne/src/app/edit-services/edit-services.component.html
@@ -10,6 +10,7 @@
                 <tr>
                     <th>Username</th>
                     <th>Service URL</th>
+                    <th>Service token URL</th>
                     <th>Service type</th>
                     <th>Centre</th>
                     <th *ngIf="this.authenticationService.currentUser.isAdmin">Actions</th>
@@ -17,6 +18,7 @@
                 <tr *ngFor="let service of serviceList">
                     <td class="cell-username">{{service.username}}</td>
                     <td class="cell-service_url">{{service.service_url}}</td>
+                    <td class="cell-token_url">{{service.token_url}}</td>
                     <td class="cell-service_type">{{service.service_type}}</td>
                     <td class="cell-centre">{{service.centre}}</td>
                     <td *ngIf="this.authenticationService.currentUser.isAdmin" class="cell-actions">
@@ -87,6 +89,13 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="input-group mb-1" *ngIf="showOauth2Fields">
+                        <div class="mb-1">
+                            <label for="add_token_url" class="form-label">Service token URL</label>
+                            <input type="text" class="form-control" id="add_token_url" [value]="service.token_url">
+                            <small id="tokenUrlHelp" class="form-text">Length: 1 - 256 characters.<br>Invalid characters: , ; and SPACE</small>
+                        </div>
+                    </div>
                     <div class="row" >
                         <button type="button" class="btn btn-secondary ml-auto m-3" data-bs-dismiss="modal" aria-label="Close">Close</button>
                         <button type="submit" class="btn btn-primary m-3" (click)="onAddSubmit()">Submit</button>
@@ -152,6 +161,13 @@
                                     <a class="dropdown-item" (click)="setNewFormCentre(centre.id)">{{centre.name}}</a>
                                 </li>
                             </ul>
+                        </div>
+                    </div>
+                    <div class="input-group mb-1">
+                        <div class="mb-1">
+                            <label for="edit_token_url" class="form-label">Service token URL</label>
+                            <input type="text" class="form-control" id="edit_token_url" [(ngModel)]="service.token_url" name="edit_token_url">
+                            <small id="tokenUrlHelp" class="form-text">Length: 1 - 256 characters.<br>Invalid characters: , ; and SPACE</small>
                         </div>
                     </div>
                     <div class="row" >
