changed cdn imports to npm packages

--- a/dafne/src/app/header/header.component.css
+++ b/dafne/src/app/header/header.component.css
@@ -1,5 +1,6 @@
 /* Header */
 .header {
+    position: relative;
     background-color: var(--main-bg-color);
     color: var(--main-text-color);
     height: 3rem;
@@ -35,6 +36,10 @@
     -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5);
     justify-items: center;
+
+    right: 0;
+    left: auto;
+    
 }
 .dropdown-item{
     font-size: 1.3rem;
