--- a/dafne/src/app/header/header.component.html
+++ b/dafne/src/app/header/header.component.html
@@ -4,12 +4,12 @@
       <i class="home-icon fa fa-home ml-auto" aria-hidden="true"></i>
       <i class="account-icon" data-bs-toggle="dropdown" (click)="checkUserAuthenticated()">A</i>
       <ul class="dropdown-menu" id="dropdown-menu" aria-labelledby="account-dropdown-button" >
-            <li id="centres-link"><a class="dropdown-item" routerLink="edit-centres" [skipLocationChange]="true" >Centres</a></li>
-            <li id="services-link"><a class="dropdown-item" routerLink="edit-services" [skipLocationChange]="true" >Services</a></li>
-            <li id="synchronizers-link"><a class="dropdown-item" routerLink="edit-synchronizers" [skipLocationChange]="true" >Synchronizers</a></li>
-            <li id="completeness-link"><a class="dropdown-item" [routerLink]="['/gui', { outlets: { centralBodyRouter: ['completeness-component']}}]" [skipLocationChange]="true">Completeness</a></li>
-            <li id="services-availability-link"><a class="dropdown-item" [routerLink]="['/gui', { outlets: { centralBodyRouter: ['service-availability']}}]" [skipLocationChange]="true" >Service Availability</a></li>
-            <li id="publication-latency-link"><a class="dropdown-item" [routerLink]="['/gui', { outlets: { centralBodyRouter: ['publication-latency-component']}}]" [skipLocationChange]="true">Publication Latency</a></li>
-            <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+            <li id="centres-link"><a class="dropdown-item" routerLink="edit-centres" [skipLocationChange]="true" (click)="ddLinkClicked()">Centres</a></li>
+            <li id="services-link"><a class="dropdown-item" routerLink="edit-services" [skipLocationChange]="true" (click)="ddLinkClicked()">Services</a></li>
+            <li id="synchronizers-link"><a class="dropdown-item" routerLink="edit-synchronizers" [skipLocationChange]="true" (click)="ddLinkClicked()">Synchronizers</a></li>
+            <li id="completeness-link"><a class="dropdown-item" [routerLink]="['/gui', { outlets: { centralBodyRouter: ['completeness-component']}}]" [skipLocationChange]="true" (click)="ddLinkClicked()">Completeness</a></li>
+            <li id="services-availability-link"><a class="dropdown-item" [routerLink]="['/gui', { outlets: { centralBodyRouter: ['service-availability']}}]" [skipLocationChange]="true" (click)="ddLinkClicked()">Service Availability</a></li>
+            <li id="publication-latency-link"><a class="dropdown-item" [routerLink]="['/gui', { outlets: { centralBodyRouter: ['publication-latency-component']}}]" [skipLocationChange]="true" (click)="ddLinkClicked()">Publication Latency</a></li>
+            <li><a class="dropdown-item" (click)="logout()" (click)="ddLinkClicked()">Logout</a></li>
       </ul>
 </div>
