modify 'Publication Latency' to 'Publication Timeliness'

--- a/dafne/src/app/MAIN_VIEW_ITEMS/network-view/network-view.component.css
+++ b/dafne/src/app/MAIN_VIEW_ITEMS/network-view/network-view.component.css
@@ -10,6 +10,7 @@
     background-color: var(--main-bg-color);
     color: var(--main-text-color);
     min-width: 980px;
+    position: relative;
 }
 
 /* Centres List */
