--- a/dafne/src/app/SIDEBAR_ITEMS/pub-latency/pub-latency.component.html
+++ b/dafne/src/app/SIDEBAR_ITEMS/pub-latency/pub-latency.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div id="pub-latency-icon">F</div>
-    <div id="pub-latency-title">Publication Latency</div>
+    <div id="pub-latency-title">Publication Timeliness</div>
 </div>
 <button id="pub-latency-show-but"
     [routerLink]="[{ outlets: { centralBodyRouter: ['publication-latency-component']}}]"
